tests/chapter_15/valid/pointer_arithmetic/negative_pointer_diff.c
int main(void)
{
    int arr[4] = {1, 2, 3, 4};
    int *ptr = arr + 3;
    return (arr - ptr == -3);
}